<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Betamax</string>
    <string name="enter_email_address">Please enter an email address.</string>
    <string name="enter_username">Please enter a username.</string>
    <string name="invalid_username">Please enter a valid username.\n  • Usernames must start with a letter. Allowed characters are a–z (only lower case), 0–9, _, - (dash), and .(dot).</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="invalid_password">Please enter a valid password.\n  • Must be at least 8 characters long\n  • Use at least one digit (0–9) and one letter (a-z)</string>
    <string name="sign_into_your_mynta_account_to_continue">Sign into your account to continue</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="unknown_issue_occurred">An unknown error has occurred while processing this request. Please try again later.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reconfirm_your_password">Please re-confirm your password.</string>
    <string name="password_doesnt_match">Password doesn\'t match.</string>
    <string name="newly_release">Newly Release</string>
    <string name="home">Home</string>
    <string name="email_address">Email Address</string>
    <string name="my_movies">My Movies</string>
    <string name="my_tvchannels">My Tv Channels</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_users_found">We couldn\'t find any users associated with that username!</string>
    <string name="wrong_password">The password entered is incorrect. Try again</string>
    <string name="signout">Sign out</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_updated_successfully">Password changed successfully.</string>
    <string name="no_results">There is nothing here right now.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="try_again">Try again</string>
    <string name="search">Search</string>
    <string name="verification_code">Verification Code</string>
    <string name="email_resent">Password reset email has been re-sent</string>
    <string name="verify" tools:ignore="PrivateResource">Verify</string>
    <string name="update_password">Update Password</string>
    <string name="signup">Sign Up</string>
    <string name="user_exists">User already exists</string>
    <string name="version">Version</string>
    <string name="couldn_t_load_content_maybe_your_internet_connection_down_pull_to_try_again">Couldn\'t load content, connect to the internet and try again.</string>
    <string name="verification_code_expired">Verification code is invalid or expired.</string>
    <string name="agreement_notice">By signing up you accept  <a href="https://google.com"><b>Terms of Use</b></a>, and <a href="https://google.com"><b>Privacy Policy</b></a>.</string>
    <string name="current_password_wrong">Your current password is incorrect. Please try again.</string>
    <string name="view_all">View All</string>
    <string name="create_a_new_account_to_continue">Create a new account to continue</string>
    <string name="resend">Resend</string>
    <string name="resend_code_in">Resend code in 00:</string>
    <string name="your_new_password_must_differ_nfrom_your_previous_used_password">Your new password must differ\nfrom your previous used password</string>
    <string name="about">About</string>
    <string name="speak_help">Speak to search help…</string>
    <string name="account_name">Account Name</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="set_password">Set Password</string>
    <string name="please_enter_the_6_digit_code_sent_to_you_at">Please enter the 6-digit code sent to you at</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="profile">Profile</string>
    <string name="we_sent_email">We Sent You Email!</string>
    <string name="search_movies_series">Search movies, series…</string>
    <string name="share_movie">Share Movie</string>
    <string name="categories">Categories</string>
    <string name="related_movies">Related Movies</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="subscription">Subscription</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="story">Story</string>
    <string name="feedback_email_subject">Subject</string>
    <string name="feedback_email_body">Body</string>
    <string name="premium">Premium</string>
    <string name="access_all_content">Access all content</string>
    <string name="genres">Genres</string>
    <string name="mylist">My List</string>
    <string name="episodes">Episodes</string>
    <string name="cast">Cast</string>
    <string name="subscription_ends_in">Subscription ends in</string>
    <string name="started_at">Started at:</string>
    <string name="ends_at">Ends at:</string>
    <string name="days">Days</string>
    <string name="watch_episode">Watch Episode</string>
    <string name="all_genres">All Genres</string>
    <string name="subscription_status">Watch movies, series and tv shows for free and without ads all day.</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="duration_hint">00:00</string>
    <string name="tv">TV</string>
    <string name="sd">SD</string>
    <string name="hd">HD</string>
    <string name="fhd">FHD</string>
    <string name="live_tv">Live Tv</string>
    <string name="video_preferences">Video Preferences</string>
    <string name="manage_video_quality">Manage Video Quality</string>
    <string name="go_premium">Go Premium</string>
    <string name="benefits_of_premium">Benefits of Premium</string>
    <string name="select_movie_language">Select Movie Language</string>
    <string name="remove_ads">Remove ads</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="diamond">Diamond</string>
    <string name="per_month">Per month</string>
    <string name="trending">Trending</string>
    <string name="thank_you_for_subscribing">Thank you for subscribing. You can manage your subscription from your account.</string>
    <string name="select_video_quality">Select Video Quality</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="save">Save</string>
    <string name="profile_info_saved_successfully">Profile info saved successfully.</string>
    <string name="no_tv_channels_found">No tv channels found!</string>
    <string name="select_season">Select Season</string>
    <string name="season_1">Season 1</string>
    <string name="app_restricted">App is Restricted</string>
    <string name="cant_use_app_with_vpn_activated">You can\'t use Betamax while VPN is activated. Please disable your current working VPN and try again.</string>
    <string name="i_understand">I Understand</string>
    <string name="failed_to_subscribe">Failed to subscribe, please try again later.</string>
    <string name="by">By</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="subscribe_now_description">Subscribe now and enjoy watching all content without limitations.</string>
    <string name="subscribe_now">Subscribe now!</string>
    <string name="scan_the_qr_code_to_complete_your_subscription">Scan the QR Code to complete your subscription!</string>
    <string name="account_settings">Account Settings</string>
    <string name="configuration">Configuration</string>
    <string name="rating">Rating</string>
    <string name="watch_now">Watch Now</string>
    <string name="released_in">Released in</string>
    <string name="add_to_mylist">Add to My List</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="your_list_is_empty">Your list is empty.</string>
    <string name="start_adding_content_to_your_list">Start adding movies, series and tv channels to your list.</string>
    <string name="seasons">Seasons</string>
    <string name="checkout">Checkout</string>
    <string name="preview">Preview</string>
    <string name="are_you_sure_you_want_exit">Are you sure you want exit?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="all_tv_channels">All Tv Channels</string>
    <string name="cant_move_back">Can\'t move back</string>
    <string name="cant_move_forward">Can\'t move forward</string>
    <string name="regular">Regular</string>
    <string name="select_this_package">Select this Package</string>
    <string name="payment">Payment</string>
    <string name="paypal">PayPal</string>
    <string name="select_payment_method_to_checkout">Select a payment method to checkout</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="_1_device">• 1 Device</string>
    <string name="_2_device">• 2 Device</string>
    <string name="_3_device">• 3 Device</string>
    <string name="kontinue">Continue</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_successfully_subscribed_you_can_now_access_exclusive_content_all_day_long">You have successfully subscribed. You can now access exclusive content all day long.</string>
    <string name="remove_from_continue_to_watch">Remove from Continue to Watch</string>
    <string name="languages">Languages</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>
    <string name="disable_subtitles">Disable Subtitles</string>
    <string name="favorites">Favorites</string>
    <string name="quality">Quality</string>
    <string name="tvchannel_add_to_favorites">Tv channel added to favorites.</string>
    <string name="tvchannel_removed_from_favorites">Tv channel removed from favorites</string>
    <string name="all">All</string>
</resources>