<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_transparent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?color_light_separate"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/go_premium"
                android:textColor="@color/color_theme"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".9"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/benefits_of_premium"
                android:textAlignment="center"
                android:textColor="?color_dark"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/subscribe_now_description"
                android:textColor="?color_dark"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:paddingStart="0dp"
                        android:paddingTop="3dp"
                        android:paddingEnd="3dp"
                        android:paddingBottom="3dp"
                        android:src="@drawable/icon_done_color"
                        tools:ignore="ContentDescription,TooDeepLayout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha=".9"
                        android:text="@string/remove_ads"
                        android:textAlignment="center"
                        android:textColor="?color_dark"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:paddingStart="0dp"
                        android:paddingTop="3dp"
                        android:paddingEnd="3dp"
                        android:paddingBottom="3dp"
                        android:src="@drawable/icon_done_color"
                        tools:ignore="ContentDescription,TooDeepLayout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha=".9"
                        android:text="@string/access_all_content"
                        android:textAlignment="center"
                        android:textColor="?color_dark"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?color_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".9"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/subscribe_now"
                android:textAlignment="center"
                android:textColor="?color_dark"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/scan_the_qr_code_to_complete_your_subscription"
                android:textColor="?color_dark"
                android:textSize="17sp" />

            <ImageView
                android:id="@id/subscription_qrcode"
                android:layout_width="160dp"
                android:layout_marginTop="15dp"
                android:layout_height="160dp"
                android:src="?color_light_separate" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>