<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.picassos.betamax.android.presentation.app.auth.reset_password.ResetPasswordViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?color_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="70dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/set_password"
                android:textColor="?color_dark"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/your_new_password_must_differ_nfrom_your_previous_used_password"
                android:textAlignment="center"
                android:textColor="?color_dark"
                android:textSize="14sp" />

            <EditText
                android:id="@id/new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:afterTextChanged="@{(text) -> viewModel.onPasswordChange(text)}"
                android:background="@drawable/input_rectangle_background"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@{viewModel.resetPasswordFormState.password}"
                android:textColor="?color_dark"
                android:textColorHint="?color_dark"
                android:textSize="@dimen/input_text_size" />

            <EditText
                android:id="@id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="12dp"
                android:afterTextChanged="@{(text) -> viewModel.onConfirmPasswordChange(text)}"
                android:background="@drawable/input_rectangle_background"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@{viewModel.resetPasswordFormState.confirmPassword}"
                android:textColor="?color_dark"
                android:textColorHint="?color_dark"
                android:textSize="@dimen/input_text_size" />

            <Button
                android:id="@id/update_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_primary"
                android:onClick="@{() -> viewModel.onSubmit()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/update_password"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/input_text_size"
                app:confirm_password_error="@{viewModel.resetPasswordFormState.confirmPasswordError}"
                app:password_error="@{viewModel.resetPasswordFormState.passwordError}" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
