<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?color_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_wifi"
                app:tint="?color_dark"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="15dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/app_restricted"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?color_dark"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cant_use_app_with_vpn_activated"
                android:textColor="?color_dark" />

            <Button
                android:id="@id/confirm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/toolbar_background"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/i_understand"
                android:textAllCaps="false"
                android:textSize="@dimen/input_text_size"
                android:textColor="?color_dark" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>