<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="41dp"
                android:layout_height="6dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="?divider_inline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginBottom="15dp"
                android:text="@string/manage_video_quality"
                android:textColor="?color_dark"
                android:textSize="13sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:id="@id/sd_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sd"
                    android:textColor="?color_dark"
                    android:textStyle="bold"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@id/hd_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hd"
                    android:textColor="?color_dark"
                    android:textStyle="bold"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@id/fhd_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/input_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fhd"
                    android:textColor="?color_dark"
                    android:textStyle="bold"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>